feat: 예약 중복 확인, 참가 테이블

--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "root",
-    "password": "1234",
+    "username": "admin",
+    "password": "asd123!!",
     "database": "carnect",
-    "host": "127.0.0.1",
+    "host": "carnect.camtedftz9in.ap-northeast-2.rds.amazonaws.com",
     "dialect": "mysql"
   },
   "test": {
