--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
@@ -21,7 +22,8 @@
     "passport": "^0.4.1",
     "passport-kakao": "^1.0.1",
     "pm2": "^4.5.6",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "unirest": "^0.6.0"
   },
   "devDependencies": {
     "eslint": "^7.26.0",
