--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-async-handler": "^1.1.4",
     "express-validator": "^6.11.1",
     "http-status-codes": "^2.1.4",
+    "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
